[gd_scene load_steps=7 format=3 uid="uid://c5cavwa2xdt0b"]

[ext_resource type="Script" path="res://src/ui_parts/palette_config.gd" id="1_2fy8k"]
[ext_resource type="Texture2D" uid="uid://dr2erka82g6j4" path="res://visual/icons/Edit.svg" id="2_35dgp"]
[ext_resource type="Script" path="res://src/ui_elements/BetterLineEdit.gd" id="2_coqnx"]
[ext_resource type="FontFile" uid="uid://clpf84p1lfwlp" path="res://visual/fonts/Font.ttf" id="2_cttpy"]
[ext_resource type="Texture2D" uid="uid://ccbta5q43jobk" path="res://visual/icons/More.svg" id="5_vjxeq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lq3bn"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.34902, 0.501961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PaletteConfig" type="PanelContainer"]
offset_right = 21.0
offset_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_2fy8k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 6

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="PaletteLabel" type="Label" parent="MarginContainer/HBoxContainer/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="NameEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/MainContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("2_cttpy")
theme_override_styles/normal = SubResource("StyleBoxFlat_lq3bn")
max_length = 30
script = ExtResource("2_coqnx")

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "#edit_palette_name"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("2_35dgp")

[node name="ColorsContainer" type="HFlowContainer" parent="MarginContainer/HBoxContainer/MainContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 3

[node name="ActionButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("5_vjxeq")

[connection signal="text_change_canceled" from="MarginContainer/HBoxContainer/MainContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_change_canceled"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/MainContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/MainContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainContainer/HBoxContainer/EditButton" to="." method="popup_edit_name"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ActionButton" to="." method="_on_action_button_pressed"]
